--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -10,3 +10,6 @@ gateway          = "192.168.68.1"
 
 storage          = "local-lvm"
 snippets_storage = "local"
+
+# Optional: defaults to ~/.ssh/id_ed25519.pub
+# ssh_public_key_file = "~/.ssh/id_ed25519.pub"
