Fix CI script syntax

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,5 @@ test:
   stage: test
   script:
     - echo "Hello from Kubernetes runner!"
-    - echo "Running on $(hostname)"
-    - echo "Kernel: $(uname -r)"
+    - hostname
+    - uname -r
